# ai-blogger-os

./: Cargo.toml  Dioxus.toml  README.md
assets/styling/: compose.css  desk.css  main.css  markdown.css  terminal.css
src/: main.rs
src/app/: app_type.rs  desktop.rs  mod.rs
src/ascii_art/: greeting_ascii.rs  mod.rs
src/components/: compose.rs  hero.rs  loader.rs  markdown_vr.rs  mod.rs  terminal_view.rs
src/global/: global_address.rs  global_state.rs  mod.rs
src/model/: blog_struct.rs  file_struct.rs  mod.rs
src/utils/: mod.rs  resize_handle.rs  upload_file.rs
